Fix: Adjust Select component positioning and remove unnecessary overflow styles

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -53,10 +53,8 @@
   }
 
   html {
-    overflow-y: scroll;
-    margin-right: 0;
-    padding-left: calc(100vw - 100%);
-    scrollbar-gutter: stable;
+    overflow-y: scroll !important;
+    width: 100vw;
   }
 
   body {
@@ -66,5 +64,8 @@
       hsl(var(--background)) 0%,
       color-mix(in hsl, hsl(var(--muted)) 10%, hsl(var(--background))) 100%
     );
+    overflow-x: hidden;
+    position: relative;
+    width: 100%;
   }
 }
